--- a/locust.conf
+++ b/locust.conf
@@ -1,6 +1,6 @@
 locustfile = locustfile.py
 headless = true
-host = http://34.146.213.152:80
+host = http://[ip]:80
 users = 1000
 spawn-rate = 10
 run-time = 600s
